feat: paginate workbench categories
