# workbench/app/Http/Controllers/CategoriesController.php
@@ -4,16 +4,22 @@ declare(strict_types=1);
 
 namespace Workbench\App\Http\Controllers;
 
-use Dedoc\Scramble\Attributes\Header;
+use Illuminate\Http\Request;
 use Illuminate\Http\Resources\Json\AnonymousResourceCollection;
+use Spatie\QueryBuilder\QueryBuilder;
 use Workbench\App\Http\Resources\CategoryResource;
 use Workbench\App\Models\Category;
 
 class CategoriesController
 {
-    #[Header(name: 'X-Total-Count', description: 'Total number of categories.', type: 'int', status: 200)]
-    public function __invoke(): AnonymousResourceCollection
+    public function __invoke(Request $request): AnonymousResourceCollection
     {
-        return CategoryResource::collection(Category::with('parent', 'children')->get());
+        $categories = QueryBuilder::for(Category::class)
+            ->with('parent', 'children')
+            ->paginate($request->integer('per_page', 15));
+
+        $categories->appends($request->query());
+
+        return CategoryResource::collection($categories);
     }
 }
